--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -1,4 +1,4 @@
-﻿redirectEdit = Redirect Edit
+redirectEdit = Redirect Edit
 evolve_view = Vue Evolve
 redirect_evolve_view = Rediriger vers
 duplicateButton = Bouton de Duplication
@@ -7,6 +7,7 @@ duplicate_button_view_to_configure = Configuration de la vue
 duplicate_button_association_with_main_object = Association vers l''objet original
 duplicate_button_property_to_exclude = Propriété à exclure de la duplication
 duplicate_button_association_to_exclude = Associations à exclure de la duplication
+duplicate_button_creating_association = Création des associations ...
 homepage_custom_remove_my_menu = Deactiver la fonctionnalité Mon Menu
 homepage_custom_activate_last_modified_objects = Afficher les derniers objets modifiés en page d'accueil
 homepage_custom_objectType_to_select = ObjetTypes à afficher
