--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -1,32 +1,14 @@
-﻿objects_filters = Filtri sugli Oggetti 				
-link_type = Tipo di legame					
-external_association = Associazioni esterne			  
-cluster_by_groups = Cluster per gruppi				
-head_group = Gruppo padre					
-child_group = Gruppo figlio					
-network = Network						
-focus_on = Focus su						
-enablephysics = Abilita disposizione automatica			
-disablephysics = Disabilita disposizione automatica		
-deselectall = Deseleziona tutto					
-selectall = Seleziona tutto					
-unzip_edge = Visualizzazione estesa				
-zip_edge = Visualizzazione raggruppata				
-remove_lonely_node = Rimuovi i nodi isolati			
-behaviour_highlight = Evidenzia			
-behaviour_add = Aggiungi 				
-behaviour_absolute = Assoluto			
-remove_node = Rimuovi il nodo					
-add_closes_nodes = Aggiungi nodi limitrofi			
-remove_closes_nodes = Rimuovi nodi limitrofi			
-add_all_nodes_from = Inserisci tutti i nodi da...		
-add_all_nodes_to = Inserisci tutti i nodi a...			
-add_all_connected_nodes = Inserisci tutti i nodi collegati	
-activate_expert_mode = Abilita Modalità Esperto
-deactivate_expert_mode = Disabilita la Modalità Esperto
-expert_mode = Modalità Esperto
-filter = Mostra filtri
-option = Mostra opzioni
-download = Scarica l'analisi come immagine
-
-
+redirectEdit = Modifica reindirizzamento
+evolve_view = Evolve vista
+redirect_evolve_view = Reindirizza a
+duplicateButton = Pulsante di duplicazione
+view_to_activate_duplicate_button = Attiva il pulsante nelle seguenti visualizzazioni
+duplicate_button_view_to_configure = Visualizza la configurazione
+duplicate_button_association_with_main_object = Associazione all'oggetto originale
+duplicate_button_property_to_exclude = Proprietà da escludere dalla duplicazione
+duplicate_button_association_to_exclude = Associazioni da escludere dalla duplicazione
+duplicate_button_creating_association = Creazione di associazioni ...
+homepage_custom_remove_my_menu = Disattiva la funzione Mio menu
+homepage_custom_activate_last_modified_objects = Mostra gli ultimi oggetti modificati sulla home page
+homepage_custom_objectType_to_select = ObjectTypes da visualizzare
+homePage = Pagina iniziale
