--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -12,4 +12,5 @@ homepage_custom_remove_my_menu = Deactiver la fonctionnalité Mon Menu
 homepage_custom_activate_last_modified_objects = Afficher les derniers objets modifiés en page d'accueil
 homepage_custom_objectType_to_select = ObjetTypes à afficher
 homePage = Page d''Accueil
+homepage_last_updated_objects = Derniers Objets Modifiés 
 save_configuration = La configuration a été copiée dans votre presse-papiers, veuillez la copier ici :
