display description object on the homepage

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -14,5 +14,7 @@ homepage_custom_objectType_to_select = ObjectTypes to display
 homePage = Homepage
 homepage_last_updated_objects = Last Updated Objects
 homepage_last_modified_objects_delay = Display Objects which have been modified since
-homepage_last_modified_objects_delay2 = days  
+homepage_last_modified_objects_delay2 = days
 save_configuration = Configuration has been copied to your clipboard, please copy it here :
+homepage_displaydescription = Display Description on an object on the Home Page
+homepage_displaydescriptionSelect = Select the object
