adding cds, check edit model, hide element if

--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -13,6 +13,8 @@ homepage_custom_activate_last_modified_objects = Afficher les derniers objets mo
 homepage_custom_objectType_to_select = ObjetTypes à afficher
 homePage = Page d''Accueil
 homepage_last_updated_objects = Derniers Objets Modifiés
-homepage_last_modified_objects_delay = Display Objects which have been modified since
-homepage_last_modified_objects_delay2 = days 
+homepage_last_modified_objects_delay = Afficher les Objets modifiés depuis
+homepage_last_modified_objects_delay2 = jours
 save_configuration = La configuration a été copiée dans votre presse-papiers, veuillez la copier ici :
+cds_display_popout_by_default = Afficher un popout par default dans toutes les Custom Display String
+cds_default_icon = Icone par default pour les popout dans les Custom Display String
