--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -13,6 +13,8 @@ homepage_custom_activate_last_modified_objects = Mostra gli ultimi oggetti modif
 homepage_custom_objectType_to_select = ObjectTypes da visualizzare
 homePage = Pagina iniziale
 homepage_last_updated_objects = Ultimi oggetti modificati
-homepage_last_modified_objects_delay = Display Objects which have been modified since
-homepage_last_modified_objects_delay2 = days 
+homepage_last_modified_objects_delay = Visualizza oggetti che sono stati modificati da allora
+homepage_last_modified_objects_delay2 = giorni
 save_configuration = La configurazione è stata copiata negli appunti, copiarla qui
+cds_display_popout_by_default = Visualizza un popup predefinito in tutte le stringhe di visualizzazione personalizzate
+cds_default_icon = Icona predefinita per popout nella stringa di visualizzazione personalizzata
