--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -18,3 +18,5 @@ homepage_last_modified_objects_delay2 = days
 save_configuration = Configuration has been copied to your clipboard, please copy it here :
 homepage_displaydescription = Display Description on an object on the Home Page
 homepage_displaydescriptionSelect = Select the object
+cds_display_popout_by_default = Display default popout in all Custom Display String
+cds_default_icon = Default Icon for popout in Custom Display String
