--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -15,8 +15,23 @@ homePage = Homepage
 homepage_last_updated_objects = Last Updated Objects
 homepage_last_modified_objects_delay = Display Objects which have been modified since
 homepage_last_modified_objects_delay2 = days
-save_configuration = Configuration has been copied to your clipboard, please copy it here :
 homepage_displaydescription = Display Description on an object on the Home Page
 homepage_displaydescriptionSelect = Select the object
-cds_display_popout_by_default = Display default popout in all Custom Display String
-cds_default_icon = Default Icon for popout in Custom Display String
+save_configuration = Configuration has been copied to your clipboard, please copy it here :
+cds_display_popout_by_default = Display default popout on custom display string
+cds_default_icon = Default icon for custom display string
+cdsEnhanced = Custom Display String
+hideElement_action_type = Action
+label_filter = Filter
+hideElement_type = Element affected
+actionOnObjectPage = Action On Object Page
+evolve_view_for_unicity_checking = Index Page to check property
+name = Name
+unique = Unique
+Automatic Value = Automatic Value
+association = Association
+nodeName = Association Node Name
+min = Minimum
+max = Maximum
+checkEditModel = Check Edit Model
+properties = Properties
