--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -15,6 +15,23 @@ homePage = Page d''Accueil
 homepage_last_updated_objects = Derniers Objets Modifiés
 homepage_last_modified_objects_delay = Afficher les Objets modifiés depuis
 homepage_last_modified_objects_delay2 = jours
+homepage_displaydescription = Display Description on an object on the Home Page
+homepage_displaydescriptionSelect = Select the object
 save_configuration = La configuration a été copiée dans votre presse-papiers, veuillez la copier ici :
 cds_display_popout_by_default = Afficher un popout par default dans toutes les Custom Display String
 cds_default_icon = Icone par default pour les popout dans les Custom Display String
+cdsEnhanced = Custom Display String
+hideElement_action_type = Action
+label_filter = Filtre
+hideElement_type = Eléments Affectés
+actionOnObjectPage = Action On Object Page
+evolve_view_for_unicity_checking = Page Index afin de vérifier l'unicité d'un ou plusieurs propriétés
+name = Nom
+unique = Unique
+Automatic Value = Rempli Automatiquement
+association = Association
+nodeName = Nom du Noeud d'Association
+min = Minimum
+max = Maximum
+checkEditModel = Check Edit Model
+properties = Propriétés
