--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -3,7 +3,7 @@ evolve_view = Evolve vista
 redirect_evolve_view = Reindirizza a
 duplicateButton = Pulsante di duplicazione
 view_to_activate_duplicate_button = Attiva il pulsante nelle seguenti visualizzazioni
-duplicate_button_view_to_configure = Visualizza la configurazione
+duplicate_button_view_to_configure = Configurazione della vista
 duplicate_button_association_with_main_object = Associazione all'oggetto originale
 duplicate_button_property_to_exclude = Proprietà da escludere dalla duplicazione
 duplicate_button_association_to_exclude = Associazioni da escludere dalla duplicazione
@@ -12,9 +12,26 @@ homepage_custom_remove_my_menu = Disattiva la funzione Mio menu
 homepage_custom_activate_last_modified_objects = Mostra gli ultimi oggetti modificati sulla home page
 homepage_custom_objectType_to_select = ObjectTypes da visualizzare
 homePage = Pagina iniziale
-homepage_last_updated_objects = Ultimi oggetti modificati
+homepage_last_updated_objects = Ultimi oggetti aggiornati
 homepage_last_modified_objects_delay = Visualizza oggetti che sono stati modificati da allora
 homepage_last_modified_objects_delay2 = giorni
-save_configuration = La configurazione è stata copiata negli appunti, copiarla qui
-cds_display_popout_by_default = Visualizza un popup predefinito in tutte le stringhe di visualizzazione personalizzate
-cds_default_icon = Icona predefinita per popout nella stringa di visualizzazione personalizzata
+homepage_displaydescription = Visualizza la descrizione su un oggetto nella Home Page
+homepage_displaydescriptionSelect = Seleziona l'oggetto
+save_configuration = La configurazione è stata copiata negli appunti, copiarla qui:
+cds_display_popout_by_default = Effettua i popout di default in tutti i display personalizzati stringa di visualizzazione
+cds_default_icon = Icona per impostazione predefinita per i popup
+cdsEnhanced = Stringa di visualizzazione personalizzata
+hideElement_action_type = Azione
+label_filter = Filtro
+hideElement_type = Tipo di elementi affetti
+actionOnObjectPage = Action On Object Page
+evolve_view_for_unicity_checking = Pagina indice per controllare la proprietà
+nome = nome
+unique = Unique
+Valore automatico = Valore automatico
+associazione = Associazione
+nodeName = Nome nodo associazione
+min = minimo
+max = massimo
+checkEditModel = Check Edit Model
+properties = Proprietà
