--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -35,3 +35,6 @@ min = Minimum
 max = Maximum
 checkEditModel = Check Edit Model
 properties = Properties
+hideElement_css_class = Class HTML
+hideElement_html_id = ID HTML
+hideElement_jQuerySelector = jQuery Selector
