--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -24,6 +24,9 @@ cdsEnhanced = Custom Display String
 hideElement_action_type = Action
 label_filter = Filtre
 hideElement_type = Eléments Affectés
+hideElement_css_class = Class HTML
+hideElement_html_id = ID HTML
+hideElement_jQuerySelector = jQuery Selector
 actionOnObjectPage = Action On Object Page
 evolve_view_for_unicity_checking = Page Index afin de vérifier l'unicité d'un ou plusieurs propriétés
 name = Nom
