--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -8,7 +8,7 @@ duplicate_button_association_with_main_object = Association vers l''objet origin
 duplicate_button_property_to_exclude = Propriété à exclure de la duplication
 duplicate_button_association_to_exclude = Associations à exclure de la duplication
 duplicate_button_creating_association = Création des associations ...
-homepage_custom_remove_my_menu = Deactiver la fonctionnalité Mon Menu
+homepage_custom_remove_my_menu = Déactiver la fonctionnalité Mon Menu
 homepage_custom_activate_last_modified_objects = Afficher les derniers objets modifiés en page d'accueil
 homepage_custom_objectType_to_select = ObjetTypes à afficher
 homePage = Page d''Accueil
@@ -28,7 +28,7 @@ hideElement_css_class = Class HTML
 hideElement_html_id = ID HTML
 hideElement_jQuerySelector = jQuery Selector
 actionOnObjectPage = Action On Object Page
-evolve_view_for_unicity_checking = Page Index afin de vérifier l'unicité d'un ou plusieurs propriétés
+evolve_view_for_unicity_checking = Page Index afin de vérifier l''unicité d''un ou plusieurs propriétés
 name = Nom
 unique = Unique
 Automatic Value = Rempli Automatiquement
@@ -38,3 +38,7 @@ min = Minimum
 max = Maximum
 checkEditModel = Check Edit Model
 properties = Propriétés
+image_url = Url de l''image
+fontawesome_icon = Icône Font Awesome
+html_text = Texte
+result_preview = Preview
