--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -24,6 +24,9 @@ cdsEnhanced = Custom Display String
 hideElement_action_type = Action
 label_filter = Filter
 hideElement_type = Element affected
+hideElement_css_class = Class HTML
+hideElement_html_id = ID HTML
+hideElement_jQuerySelector = jQuery Selector
 actionOnObjectPage = Action On Object Page
 evolve_view_for_unicity_checking = Index Page to check property
 name = Name
@@ -35,6 +38,7 @@ min = Minimum
 max = Maximum
 checkEditModel = Check Edit Model
 properties = Properties
-hideElement_css_class = Class HTML
-hideElement_html_id = ID HTML
-hideElement_jQuerySelector = jQuery Selector
+image_url = Url de l''image
+fontawesome_icon = Icône Font Awesome
+html_text = Texte
+result_preview = Preview
