--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -15,6 +15,9 @@ homePage = Homepage
 homepage_last_updated_objects = Last Updated Objects
 homepage_last_modified_objects_delay = Display Objects which have been modified since
 homepage_last_modified_objects_delay2 = days
+homepage_last_modified_display_index_page = Display Link to an evolve page
+homepage_last_modified_index_page_link = Link
+homepage_last_modified_index_page_text = Text
 homepage_displaydescription = Display Description on an object on the Home Page
 homepage_displaydescriptionSelect = Select the object
 save_configuration = Configuration has been copied to your clipboard, please copy it here :
