--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -15,6 +15,9 @@ homePage = Page d''Accueil
 homepage_last_updated_objects = Derniers Objets Modifiés
 homepage_last_modified_objects_delay = Afficher les Objets modifiés depuis
 homepage_last_modified_objects_delay2 = jours
+homepage_last_modified_display_index_page = Afficher un lien vers une page evolve
+homepage_last_modified_index_page_link = Lien
+homepage_last_modified_index_page_text = Texte
 homepage_displaydescription = Display Description on an object on the Home Page
 homepage_displaydescriptionSelect = Select the object
 save_configuration = La configuration a été copiée dans votre presse-papiers, veuillez la copier ici :
