--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -17,6 +17,9 @@ homepage_last_modified_objects_delay = Visualizza oggetti che sono stati modific
 homepage_last_modified_objects_delay2 = giorni
 homepage_displaydescription = Visualizza la descrizione su un oggetto nella Home Page
 homepage_displaydescriptionSelect = Seleziona l'oggetto
+homepage_last_modified_display_index_page = Mostra un collegamento a una pagina
+homepage_last_modified_index_page_link = Link
+homepage_last_modified_index_page_text = text
 save_configuration = La configurazione è stata copiata negli appunti, copiarla qui:
 cds_display_popout_by_default = Effettua i popout di default in tutti i display personalizzati stringa di visualizzazione
 cds_default_icon = Icona per impostazione predefinita per i popup
@@ -24,6 +27,9 @@ cdsEnhanced = Stringa di visualizzazione personalizzata
 hideElement_action_type = Azione
 label_filter = Filtro
 hideElement_type = Tipo di elementi affetti
+hideElement_css_class = Class HTML
+hideElement_html_id = ID HTML
+hideElement_jQuerySelector = jQuery Selector
 actionOnObjectPage = Action On Object Page
 evolve_view_for_unicity_checking = Pagina indice per controllare la proprietà
 nome = nome
@@ -35,6 +41,7 @@ min = minimo
 max = massimo
 checkEditModel = Check Edit Model
 properties = Proprietà
-hideElement_css_class = Class HTML
-hideElement_html_id = ID HTML
-hideElement_jQuerySelector = jQuery Selector
+image_url = URL dell''immagine
+fontawesome_icon = Icona Font Awesome
+html_text = Testo
+result_preview = Preview
