--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -42,7 +42,10 @@ max = Maximum
 checkEditModel = Check Edit Model
 properties = Properties
 property = Property
-image_url = Url de l''image
+associations = Associations
+image_url = Picture URL
+width = Width
+height = Height
 fontawesome_icon = Icône Font Awesome
 html_text = Texte
 result_preview = Preview
