--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -42,7 +42,10 @@ max = Maximum
 checkEditModel = Check Edit Model
 properties = Propriétés
 property = Propriété
+associations = Associations
 image_url = Url de l''image
+width = Longueur
+height = Largeur
 fontawesome_icon = Icône Font Awesome
 html_text = Texte
 result_preview = Preview
