--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -43,6 +43,9 @@ checkEditModel = Check Edit Model
 properties = Proprietà
 property = Proprieta
 image_url = URL dell''immagine
+associations = Associazioni
+width = larghezza
+height = altezza
 fontawesome_icon = Icona Font Awesome
 html_text = Testo
 result_preview = Preview
