--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -18,8 +18,8 @@ homepage_last_modified_objects_delay2 = jours
 homepage_last_modified_display_index_page = Afficher un lien vers une page evolve
 homepage_last_modified_index_page_link = Lien
 homepage_last_modified_index_page_text = Texte
-homepage_displaydescription = Display Description on an object on the Home Page
-homepage_displaydescriptionSelect = Select the object
+homepage_displaydescription = Afficher la description d''un objet sur la page d''accueil
+homepage_displaydescriptionSelect = Selectionner l''objet
 save_configuration = La configuration a été copiée dans votre presse-papiers, veuillez la copier ici :
 cds_display_popout_by_default = Afficher un popout par default dans toutes les Custom Display String
 cds_default_icon = Icone par default pour les popout dans les Custom Display String
