adding icon to fav item

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -18,8 +18,11 @@ homepage_last_modified_objects_delay2 = days
 homepage_last_modified_display_index_page = Display Link to an evolve page
 homepage_last_modified_index_page_link = Link
 homepage_last_modified_index_page_text = Text
+homepage_custom_background_url_image = Background Url Image
 homepage_displaydescription = Display Description on an object on the Home Page
 homepage_displaydescriptionSelect = Select the object
+homepage_last_modified_display_image_in_favourite = Display an icon if a favorite has been modified
+homepage_last_modified_display_image_in_favourite_link = Url icon
 save_configuration = Configuration has been copied to your clipboard, please copy it here :
 cds_display_popout_by_default = Display default popout on custom display string
 cds_default_icon = Default icon for custom display string
