--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -9,7 +9,7 @@ duplicate_button_property_to_exclude = Propriété à exclure de la duplication
 duplicate_button_association_to_exclude = Associations à exclure de la duplication
 duplicate_button_creating_association = Création des associations ...
 homepage_custom_remove_my_menu = Déactiver la fonctionnalité Mon Menu
-homepage_custom_activate_last_modified_objects = Afficher les derniers objets modifiés en page d'accueil
+homepage_custom_activate_last_modified_objects = Afficher les derniers objets modifiés en page d''accueil
 homepage_custom_objectType_to_select = ObjetTypes à afficher
 homePage = Page d''Accueil
 homepage_last_updated_objects = Derniers Objets Modifiés
@@ -20,6 +20,9 @@ homepage_last_modified_index_page_link = Lien
 homepage_last_modified_index_page_text = Texte
 homepage_displaydescription = Afficher la description d''un objet sur la page d''accueil
 homepage_displaydescriptionSelect = Selectionner l''objet
+homepage_last_modified_display_image_in_favourite = Afficher une icone si un favori a été modifié
+homepage_last_modified_display_image_in_favourite_link = Url icone
+homepage_custom_background_url_image = Url Image d''arrière plan
 save_configuration = La configuration a été copiée dans votre presse-papiers, veuillez la copier ici :
 cds_display_popout_by_default = Afficher un popout par default dans toutes les Custom Display String
 cds_default_icon = Icone par default pour les popout dans les Custom Display String
@@ -36,7 +39,7 @@ name = Nom
 unique = Unique
 Automatic Value = Rempli Automatiquement
 association = Association
-nodeName = Nom du Noeud d'Association
+nodeName = Nom du Noeud d''Association
 min = Minimum
 max = Maximum
 checkEditModel = Check Edit Model
