adding missing translation

--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -52,3 +52,6 @@ height = Largeur
 fontawesome_icon = Icône Font Awesome
 html_text = Texte
 result_preview = Preview
+label_pt_filter_column_property = Propriété
+label_pt_filter_column_operator = Opérateur
+label_pt_filter_column_value = Valeur
