--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -52,3 +52,6 @@ height = Height
 fontawesome_icon = Icône Font Awesome
 html_text = Texte
 result_preview = Preview
+label_pt_filter_column_property = Property
+label_pt_filter_column_operator = Operator
+label_pt_filter_column_value = Value
