--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -55,3 +55,6 @@ result_preview = Preview
 label_pt_filter_column_property = Proprietà
 label_pt_filter_column_operator = Operatore
 label_pt_filter_column_value = Valore
+pageFilter = Page Filter
+searchOnAllWord = Search On All Word
+replace_accent_and_upperCase = Not Sensitive to Accent and Uppercase
