--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -61,3 +61,22 @@ replace_accent_and_upperCase = Not Sensitive to Accent and Uppercase
 deactivateDiagramDrillDown = Replace DrillDown by Db Click Behaviour
 deactivateGPS = Deactivate GPS
 diagram = Diagram
+extendable = Extendable
+collapse_by_default = Collapse By Default
+favorite = Favorite
+quicklink = Link Based on Roles
+object_description = Description of an Object
+homepage_image_width = Image Width
+links = Links 
+label_text_to_display = Text to Display
+label_imgUrl = Url of the Picture
+label_targetUrl = Target Link
+label_add_new_link = Add New Link
+type = Type
+last_modified_object = Last Modified Objects
+label_justify = Alignment
+center = Center
+space-between = Space Between 
+space-around = Space Around
+flex-start = Start
+flex-end = End
