--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -47,8 +47,8 @@ properties = Propriétés
 property = Propriété
 associations = Associations
 image_url = Url de l''image
-width = Longueur
-height = Largeur
+width = Largeur
+height = Hauteur
 fontawesome_icon = Icône Font Awesome
 html_text = Texte
 result_preview = Preview
@@ -61,3 +61,22 @@ replace_accent_and_upperCase = Insensible à la Case et aux Accents
 deactivateDiagramDrillDown = Remplacer le Drill Down par le comportement double click
 deactivateGPS = Déactiver le bouton GPS
 diagram = Diagramme
+extendable = Extensible
+collapse_by_default = Réduit par défault
+favorite = Favori
+quicklink = Lien Basés Sur les Rôles
+object_description = Description d'un objet
+homepage_image_width = Largeur d''image
+links = Liens 
+label_text_to_display = Texte à affiché
+label_imgUrl = Url de l''image
+label_targetUrl = Url Cible du lien
+label_add_new_link = Ajouter un lien
+type = Type
+last_modified_object = Derniers Objets Modifiés
+label_justify = Alignement
+center = Centré
+space-between = Espacé 
+space-around = Espacé sur les extérieurs
+flex-start = Aligné à Gauche
+flex-end = Aligné à Droite
