--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -61,3 +61,22 @@ replace_accent_and_upperCase = Not Sensitive to Accent and Uppercase
 deactivateDiagramDrillDown = Remplacer le Drill Down par le comportement double click
 deactivateGPS = Déactiver le bouton GPS
 diagram = Diagramme
+extendable = Estensibile
+collapse_by_default = Comprimi per impostazione predefinita
+favorite = Preferito
+quicklink = Collegamento basato sui ruoli
+object_description = Descrizione di un oggetto
+homepage_image_width = Larghezza immagine
+links = link
+label_text_to_display = Testo da visualizzare
+label_imgUrl = URL dell'immagine
+label_targetUrl = Link target
+label_add_new_link = Aggiungi nuovo collegamento
+type = Type
+last_modified_object = Last Modified Objects
+label_justify = Allineamento
+center = Center
+space-between = Space Between 
+space-around = Space Around
+flex-start = Start
+flex-end = End
