--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -80,3 +80,4 @@ space-between = Space Between
 space-around = Space Around
 flex-start = Start
 flex-end = End
+replaceAccentUpperCase = Non Sensitive to Case and Accent
