--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -63,12 +63,12 @@ deactivateGPS = Déactiver le bouton GPS
 diagram = Diagramme
 extendable = Extensible
 collapse_by_default = Réduit par défault
-favorite = Favori
-quicklink = Lien Basés Sur les Rôles
-object_description = Description d'un objet
+favorite = Favoris
+quicklink = Liens Basés Sur les Rôles
+object_description = Description d''un objet
 homepage_image_width = Largeur d''image
 links = Liens 
-label_text_to_display = Texte à affiché
+label_text_to_display = Texte à afficher
 label_imgUrl = Url de l''image
 label_targetUrl = Url Cible du lien
 label_add_new_link = Ajouter un lien
