adding complexe table to coffee maker

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -81,3 +81,4 @@ space-around = Space Around
 flex-start = Start
 flex-end = End
 replaceAccentUpperCase = Non Sensitive to Case and Accent
+tableComplexeEnhanced = Complex Table
