--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -81,3 +81,9 @@ space-around = Espacé sur les extérieurs
 flex-start = Aligné à Gauche
 flex-end = Aligné à Droite
 replaceAccentUpperCase = Non Sensitif à la casse et aux accents
+tableComplexeEnhanced = Table Complexe
+columnSize = Largeur des Colonnes (px)
+tableHeight = Hauteur de la Table (%)
+order = Ordre
+title = Titre
+specificPopout = Popout à utiliser
