--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -81,3 +81,4 @@ space-around = Space Around
 flex-start = Start
 flex-end = End
 replaceAccentUpperCase = Non sensibile a caso e accento
+tableComplexeEnhanced = Complexe Table
