--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -88,3 +88,7 @@ order = Ordre
 title = Titre
 specificPopout = Popout à utiliser
 grid_drop_column = Glisser ici une en-tête de colonne, pour réaliser un regroupement
+clearFilterAtStart = Enlever les filtres au démarrage
+freezeFirstOption = Geler la première colone
+itemPerPages = Nombre d'objet par page
+frozen = Geler
