--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -82,3 +82,13 @@ flex-start = Start
 flex-end = End
 replaceAccentUpperCase = Non Sensitive to Case and Accent
 tableComplexeEnhanced = Complex Table
+columnSize = Width of Column (px)
+tableHeight = Height of the Table (%)
+order = Order
+title = Title
+specificPopout = Popout to use
+grid_drop_column = Drag Column Header here to group
+clearFilterAtStart = Clear Filter At Start
+freezeFirstOption = Freeze Option Column
+itemPerPages = List of possible choices for the number of objects per page
+frozen = Frozen
