--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -82,7 +82,7 @@ flex-start = Aligné à Gauche
 flex-end = Aligné à Droite
 replaceAccentUpperCase = Non Sensitif à la casse et aux accents
 tableComplexeEnhanced = Table Complexe
-columnSize = Largeur des Colonnes (px)
+columnSize = Largeur de la Colonne (px)
 tableHeight = Hauteur de la Table (%)
 order = Ordre
 title = Titre
@@ -90,5 +90,5 @@ specificPopout = Popout à utiliser
 grid_drop_column = Glisser ici une en-tête de colonne, pour réaliser un regroupement
 clearFilterAtStart = Enlever les filtres au démarrage
 freezeFirstOption = Geler la première colone
-itemPerPages = Nombre d'objet par page
+itemPerPages = Liste des choix possible du nombre d''objet par page
 frozen = Geler
