--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -92,3 +92,4 @@ clearFilterAtStart = Enlever les filtres au démarrage
 freezeFirstOption = Geler la première colone
 itemPerPages = Liste des choix possible du nombre d''objet par page
 frozen = Geler
+clearButtonName = Effacer les Filtres
