--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -93,3 +93,4 @@ freezeFirstOption = Freeze Option Column
 itemPerPages = List of possible choices for the number of objects per page
 frozen = Frozen
 clearButtonName = Clear Filters
+displayjsonconfig = Display JSON Configuration
