changing title functionnality and fixing issue on freeze column

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -85,7 +85,7 @@ tableComplexeEnhanced = Complex Table
 columnSize = Width of Column (px)
 tableHeight = Height of the Table (%)
 order = Order
-title = Title
+donotdisplaytitle = Don't Display Title
 specificPopout = Popout to use
 grid_drop_column = Drag Column Header here to group
 clearFilterAtStart = Clear Filter At Start
