--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -94,3 +94,4 @@ itemPerPages = Liste des choix possible du nombre d''objet par page
 frozen = Geler
 clearButtonName = Effacer les Filtres
 displayjsonconfig = Afficher la Configuration JSON
+donotdisplaytitle = Ne Pas Afficher Le Titre
